--- a/base.html
+++ b/base.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h2">Get notified - Get vaccinated</span>
   </div>
-    <h6 style="color:white;">For queries reach out at adarshtalesara@gmail.com</h6>
+    <h6 style="color:white;">For queries reach out at bhoomikaj006@gmail.com</h6>
 </nav>
     {% with messages = get_flashed_messages() %}
   {% if messages %}
